* appsettings.json: mysql/EFCore/IdentityServer4 - working
* Config.cs:
* Program.cs:
* Startup.cs:
* SeedData.cs:
* tempkey.rsa:
* ASPNETMVCCoreTest.csproj:
* ASPNETMVCCoreTest.userprefs:
* ApplicationDbContext.cs:
* ConfigurationDbContextModelSnapshot.cs:
* PersistedGrantDbContextModelSnapshot.cs:
* 20171005153917_InitialIdentityServerConfigurationDbMigration.cs:
* 20171005153857_InitialIdentityServerPersistedGrantDbMigration.cs:
* 20171005153917_InitialIdentityServerConfigurationDbMigration.Designer.cs:
* 20171005153857_InitialIdentityServerPersistedGrantDbMigration.Designer.cs:

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=root;pwd=Gr8-Went;port=3305;database=mysqltestauth;sslmode=none;"
+    "DefaultConnection": "server=localhost;port=3306;userid=mvcuser;Password=Gr8-Went;database=mysqlauthtest;sslmode=none;"
   },
   "Logging": {
     "IncludeScopes": false,
