--- a/ASPNETMVCCoreTest.csproj
+++ b/ASPNETMVCCoreTest.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="MySql.Data" Version="6.10.6" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="6.10.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,4 +27,12 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Data\Migrations\Migrations\IdentityServer\ConfigurationDb\20171005153917_InitialIdentityServerConfigurationDbMigration.Designer.cs" />
+    <Compile Remove="Data\Migrations\Migrations\IdentityServer\ConfigurationDb\20171005153917_InitialIdentityServerConfigurationDbMigration.cs" />
+    <Compile Remove="Data\Migrations\Migrations\IdentityServer\ConfigurationDb\ConfigurationDbContextModelSnapshot.cs" />
+    <Compile Remove="Data\Migrations\Migrations\IdentityServer\PersistedGrantDb\20171005153857_InitialIdentityServerPersistedGrantDbMigration.Designer.cs" />
+    <Compile Remove="Data\Migrations\Migrations\IdentityServer\PersistedGrantDb\20171005153857_InitialIdentityServerPersistedGrantDbMigration.cs" />
+    <Compile Remove="Data\Migrations\Migrations\IdentityServer\PersistedGrantDb\PersistedGrantDbContextModelSnapshot.cs" />
+  </ItemGroup>
 </Project>
