updated password for local database

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;userid=mvcuser;Password=Gr8-Went;database=mysqlauthtest;sslmode=none;"
+    "DefaultConnection": "server=localhost;port=3306;userid=mvcuser;Password=Test-1234;database=mysqlauthtest;sslmode=none;"
   },
   "Logging": {
     "IncludeScopes": false,
